feat(global): adding mobile panel design

--- a/apps/front/i18n/de.json
+++ b/apps/front/i18n/de.json
@@ -817,6 +817,7 @@
       "description": "Nutze die Suchfunktionen, um alle Vorschläge der Konsultation zu entdecken und äußere dich zu denjenigen, die dich interessieren.",
       "reset_filters": "Filter löschen",
       "sort_by": "Sortieren nach",
+      "filtrer": "Filtern",
       "filter_by": "Filtern nach",
       "recent": "Neueste",
       "popular": "Beliebteste",
